--- a/classNotes/finalReview/finalReview.Rmd
+++ b/classNotes/finalReview/finalReview.Rmd
@@ -49,7 +49,9 @@ class: title-slide, center, middle, inverse
 name: announcements
 class: left, middle, inverse
 
-### Download the `finalReview.zip` file for class today (link in `slack/classroom`).
+### Download the `finalReview.zip` file for class today
+
+### Link in `slack/classroom`
 
 ---
 # Things to review
@@ -64,7 +66,7 @@ class: left, middle, inverse
 - Practice your weaknesses, e.g. code tracing, writing functions, "tidyverse" functions, etc.
 
 --
-- Memorize syntax: functions, test functions, "tidyverse" functions, etc.
+- Memorize syntax: functions, test functions, "tidyverse" functions, plotting with `ggplot2`, etc.
 
 --
 - Review hw, quiz, and exam solutions (on blackboard)
@@ -130,6 +132,8 @@ TRUE + TRUE
 ]
 
 ---
+# Logical & Relational operators
+
 ```{r}
 w <- TRUE
 x <- FALSE
@@ -138,12 +142,12 @@ z <- TRUE
 ```
 
 .leftcol[
-## Logical operators
+### Logical: `&`, `|`, `!`
 
 Write a logical statement that compares the objects `x`, `y`, and `z` and returns `TRUE`
 ]
 .rightcol[
-## Relational operators
+### Relational: `==`, `!=`, `<`, `>`, `<=`, `>=`
 
 Fill in the correct relational operators to make this statement return `TRUE`:
 
@@ -665,19 +669,6 @@ Filter the band members with 4-letter first names
 ```{r}
 beatles %>%
     filter(str_length(firstName) == 4)
-```
-
----
-# Sequence operations with pipes: `%>%`
-
-Step 1: Filter the band members born after 1940
-
-Step 2: Select only the columns `firstName` & `lastName`
-
-```{r}
-beatles %>%
-    filter(yearOfBirth > 1940) %>%
-    select(firstName, lastName)
 ```
 
 ---
